...
        </array>
    </customFonts>
    <scenes>
        <!--MainMenu-->
        <scene sceneID="tne-QT-ifu">
            <objects>
                <viewController title="MainMenu" id="BYZ-38-t0r" customClass="MainMenuVC" customModule="WineList" customModuleProvider="target" sceneMemberID="viewController">
                    <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                        <subviews>
                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="bottom" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="VTZ-Qw-ORx">
                                <rect key="frame" x="147" y="367" width="120" height="120"/>
                                <constraints>
                                    <constraint firstAttribute="width" constant="120" id="Hpa-jJ-dbE"/>
                                    <constraint firstAttribute="height" constant="120" id="tzS-YE-1n7"/>
                                </constraints>
                                <fontDescription key="fontDescription" name="Raleway-Light" family="Raleway" pointSize="17"/>
                                <state key="normal" title="Go To WineList" backgroundImage="WineListMenuIcons(stemlesswhite)">
                                    <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                </state>
                                <connections>
                                    <action selector="wineListWasTapped:" destination="BYZ-38-t0r" eventType="touchUpInside" id="Yej-i7-Sfg"/>
                                </connections>
                            </button>
...
                                <rect key="frame" x="147" y="543" width="120" height="120"/>
                                <constraints>
                                    <constraint firstAttribute="height" constant="120" id="7eB-rj-T8H"/>
                                    <constraint firstAttribute="width" constant="120" id="QuZ-c9-qo5"/>
                                </constraints>
                                <fontDescription key="fontDescription" name="Raleway-Light" family="Raleway" pointSize="17"/>
                                <state key="normal" title="Add New Wine" backgroundImage="WineListMenuAddIcon(stemlessWhite)">
                                    <color key="titleColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                </state>
                                <connections>
                                    <action selector="addWineWasTapped:" destination="BYZ-38-t0r" eventType="touchUpInside" id="qv7-Lz-qLr"/>
                                </connections>
                            </button>
...
                        <subviews>
                            <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" showsHorizontalScrollIndicator="NO" translatesAutoresizingMaskIntoConstraints="NO" id="GL6-ZV-bjT">
                                <rect key="frame" x="0.0" y="88" width="414" height="774"/>
                                <subviews>
                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="1z6-VW-L6t">
                                        <rect key="frame" x="172" y="748" width="72" height="30"/>
                                        <state key="normal" title="Save Wine">
                                            <color key="titleColor" red="0.42689045399999997" green="0.093096113159999994" blue="0.42632687250000001" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                        </state>
                                        <connections>
                                            <action selector="SaveBtnTapped:" destination="w9t-30-PAk" eventType="touchUpInside" id="SNh-xS-Hr3"/>
                                        </connections>
                                    </button>
...
                        <outlet property="priceTextField" destination="b8e-Cc-Cuj" id="IcD-lq-oJ4"/>
                        <outlet property="saveWineButton" destination="1z6-VW-L6t" id="e02-Ia-R5A"/>
                        <outlet property="scrollView" destination="GL6-ZV-bjT" id="6RN-PH-9YY"/>
                        <outlet property="storeTextField" destination="9DH-SN-BKK" id="NFK-cz-giW"/>
                        <outlet property="takePhotoBtn" destination="CY3-yM-UIW" id="7xC-UM-RBw"/>
                        <outlet property="wineImageView" destination="Hbp-c1-17g" id="yqx-ff-fN1"/>
                        <outlet property="wineNameTextField" destination="Ucv-VH-93m" id="tLO-Yc-15n"/>
                        <outlet property="wineTypeTextField" destination="smg-cH-ycB" id="vcS-Ka-dOe"/>
                        <outlet property="yearTextField" destination="ZUk-fW-NXC" id="2pj-wE-DLM"/>
                    </connections>
                </viewController>
                <placeholder placeholderIdentifier="IBFirstResponder" id="Shu-kv-vLP" userLabel="First Responder" sceneMemberID="firstResponder"/>
            </objects>
...
